light_clone/tests/ui/string_field.stderr
error[E0277]: the trait bound `String: LightClone` is not satisfied
 --> tests/ui/string_field.rs:3:10
  |
3 | #[derive(LightClone)]
  |          ^^^^^^^^^^ the trait `LightClone` is not implemented for `String`
  |
  = help: the following other types implement trait `LightClone`:
            &T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
  = note: this error originates in the derive macro `LightClone` (in Nightly builds, run with -Z macro-backtrace for more info)
